Try to fix 100% height on mobile

--- a/src/containers/Mobile/Header/s.module.scss
+++ b/src/containers/Mobile/Header/s.module.scss
@@ -2,10 +2,16 @@ $headerHeight: 80px;
 
 :global {
   #isMobile {
-    height: 100vh;
     margin: 0;
     border: none;
     box-shadow: none;
+
+    html,
+    body,
+    #root,
+    #isMobile {
+      height: 100%;
+    }
 
     [id^='content'] {
       width: 100%;
